# Fuzzy-Name-PSI

./: .gitignore  CMakeLists.txt  approx_psi.mpc  ass.cpp  ass.h  commands.txt  evaluate_ss_psi.py  local_compute.cpp  mpc_fuzzy_psi.cpp  name_encoding.cpp  name_encoding.h  rlc.cpp  rlc.h  run_benchmarks.ps1  setup_deps.sh  ss_psi.cpp  test_approx_psi.cpp
install/include/coproto/: config.h
install/include/cryptoTools/Common/: config.h
install/include/macoro/: config.h
install/lib/cmake/coproto/: buildOptions.cmake  coprotoConfig.cmake  coprotoTargets-release.cmake  coprotoTargets.cmake
install/lib/cmake/cryptoTools/: cryptoToolsConfig.cmake  cryptoToolsTargets-release.cmake  cryptoToolsTargets.cmake
install/lib/cmake/function2/: function2Config.cmake
install/lib/cmake/libdivide/: libdivideConfig.cmake
install/lib/cmake/macoro/: macoroBuildOptions.cmake  macoroConfig.cmake  macoroTargets-release.cmake  macoroTargets.cmake
install/lib/cmake/span-lite/: span-lite-config-version.cmake  span-lite-config.cmake  span-liteConfig.cmake
output/: clean_names.csv  fuzzy_names.csv  mpc_fuzzy_equivalent_duplicate_matches.csv  mpc_fuzzy_eval_summary.csv  mpc_fuzzy_false_positives.csv  mpc_fuzzy_matches.csv  mpc_fuzzy_matches_from_mpc.csv  mpc_fuzzy_missed_true_matches.csv  mpc_fuzzy_true_positives.csv  ss_psi_equivalent_duplicate_matches.csv  ss_psi_eval_summary.csv  ss_psi_false_positives.csv  ss_psi_missed_true_matches.csv  ss_psi_opened_matches.csv  ss_psi_true_positives.csv
output/mp_spdz/: approx_psi_config.mpc
script/: FuzzyNameDataGen_DTC.ipynb
script/.ipynb_checkpoints/: FuzzyNameDataGen_DTC-checkpoint.ipynb
scripts/: mp_spdz_matches_to_csv.py  run_mp_spdz_approx.sh  run_mpc_fuzzy_pipeline.sh
